# we3d

./: .gitignore  Cargo.toml  README.md  index.html  index.js  main.js  package-lock.json  package.json  web.config  webpack.config.js
data/: @objParser.js  Numbers.blend  butterfly.g3dj  newNumbers.blend  newNumbers.blend1  newNumbers.mtl
public/: index.json  indexer.js
public/shaders/default/: color_2d.frag  color_2d.vert  g3d.frag  pbr.frag  pbr.vert
src/: app_state.rs  camera.rs  common_funcs.rs  cursor.rs  gl_helper.rs  lerp_over_time.rs  lib.rs  play_area.rs  rust_client.rs
src/content/: content.rs  fetch.rs  mod.rs
src/data/: butterfly.rs  gltf_json.rs  mod.rs
src/g3d/: g3d.rs  g3dj.rs  mod.rs
src/gl_setup/: gl_setup.rs  input_setup.rs  mod.rs
src/programs/: circle_2d.rs  mod.rs  number_2d.rs  rect_2d.rs
src/programs/numbers/: indices.rs  mod.rs  number_1.rs  number_2.rs  number_3.rs  number_4.rs  number_5.rs  number_6.rs  number_7.rs  number_8.rs  number_9.rs  vertices.rs
src/shaders/: mod.rs
src/shaders/fragment/: color_2d.rs  mod.rs
src/shaders/vertex/: color_2d.rs  skinned_g3d.rs
