[package]
name = "we3d"
version = "0.1.1"
description = "A Wasm Engine 3d. Test project"
repository = "https://github.com/Interface0625/we3d.git"
authors = ["Interface0625 <karolis.lukosius@gmail.com>"]
include = ["src/**/*", "Cargo.toml"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gltf = "*"
serde= { version = "*", features = ["derive"] } 
serde_json = "*"
wasm-bindgen = { version = "*", features = ["serde-serialize"]  }
wasm-bindgen-futures = "*"
futures = "*"
nalgebra = "*"
approx = "*"
js-sys = "*"
lazy_static = "*"
console_error_panic_hook = "*"

[dependencies.web-sys]
version = "*"
features = [
    'Document',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Element',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window'
]