[package]
name = "we3d"
version = "0.1.1"
description = "A Wasm Engine 3d. Test project"
repository = "https://github.com/Interface0625/we3d.git"
authors = ["Interface0625 <karolis.lukosius@gmail.com>"]
include = ["src/**/*", "Cargo.toml"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gltf = "0.15.2"
serde= { version = "1.0.112", features = ["derive"] } 
serde_json = "1.0.55"
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]  }
wasm-bindgen-futures = "0.4.13"
futures = "0.3.5"
nalgebra = "0.27.1"
approx = "0.3.2"
js-sys = "0.3.40"
lazy_static = "1.4.0"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.40"
features = [
    'Document',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Element',
    'HtmlCanvasElement',
    'MouseEvent',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
    'Window'
]